fix(all): jdk11 Base64 question