@@ -3,10 +3,11 @@ package com.wangpeng.other.utils;
  * 生成Token的工具类：  
  */
 
-import sun.misc.BASE64Encoder;
-
+import java.util.Arrays;
+import java.util.Base64.Encoder;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 import java.util.Random;
 
 /**
@@ -30,9 +31,9 @@ public class TokenProcessor {
         String token = (System.currentTimeMillis() + new Random().nextInt(999999999)) + "";
         try {
             MessageDigest md = MessageDigest.getInstance("md5");
-            byte md5[] =  md.digest(token.getBytes());
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(md5);
+            byte[] md5 =  md.digest(token.getBytes());
+            Encoder encoder = Base64.getEncoder();
+            return new String(encoder.encode(md5));
         } catch (NoSuchAlgorithmException e) {
             // TODO Auto-generated catch block  
             e.printStackTrace();
